--- a/gagt19/css/styles.css
+++ b/gagt19/css/styles.css
@@ -179,7 +179,7 @@ margin: -10px 0 -10px 0;
     padding-bottom: 5px;
 }
 
-.registration-form .row {
+.registration-form .subrow {
     padding-top: 5px;
     padding-bottom: 5px;
 }
